# intel-backend

./: README.md  main.py  pyproject.toml
ml/: advertising.py
ml/model/: ad.pkl
mobilenet/: model.py  preprocessing.py
