[project]
name = "intel-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
